syntax = "proto3";
import "Role.proto";
//protoc --proto_path=src\main\java\com\game\protobuf --java_out=src\main\java src\main\java\com\game\protobuf\MsgRoleInfo.proto

option java_package = "com.hailintang.client.protobuf.protoc";
option java_outer_classname = "MsgRoleInfoProto";
enum RequestType{
    CHOOSEROLE = 0;
    ROLEINFO = 1;
    USEGOODS = 2;
}

message RequestRoleInfo{
    string requestId = 1;       // 请求id
    int32 userId = 2;           // 请求的uid
    string roleName = 3;
    int32 occupationId = 4;
    RequestType type = 5;      // 请求类型
    string goodsName = 6;
}

message ResponseRoleInfo{
    int32 result = 1;           // 返回结果
    int32 userId = 2;           // 返回的uid
    string content = 3;

    RequestType type = 4;       // 返回类型

    Role role = 5;          // 用户角色
}